arreglos en el formulario fieldset

--- a/areaproduccion/materiaprima.html
+++ b/areaproduccion/materiaprima.html
@@ -24,11 +24,11 @@
         </nav>
     </header>
     <main class="contenedor seccion contenido-centrado">
-        
+
         <h2 class="fw.300 center-text">Materia Prima Entrante</h2>
         <form class="formulario" action="index.html" method="post">
-           <fieldset>
-                <legend>Formulario</legend>
+            <fieldset>
+                <h2>Formulario</h2>
                 <label for="fecha">Fecha: </label>
                 <input type="date" id="fecha">
 
@@ -39,7 +39,7 @@
                 <input type="text" id="art" placeholder="id articulo">
 
                 <label for="descripcion">Descripcion: </label>
-                <textarea name="Descripcion" id="descripcion cols="30" rows="10">Ingrese descripcion del Material</textarea>
+                <textarea name="Descripcion" id="descripcion" cols="30" rows="10">Ingrese descripcion del Material</textarea>
                 <label for="cantidad">Cantidad: </label>
                 <input type="number" id="cantidad">
 
