--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="contenedor orden">
             <div class="barra">
                 <div class="logotipo">
-                    <img src="img/reciPlas.jpeg" class="logo1" alt="logo de la empresa">
+                    <h1>RECIPLAS</h1>
                 </div>
                 
                 <div class="nav">
@@ -36,7 +36,7 @@
         
         <table>
                 <tr>
-                    <th> <p>Productos</p> </th>
+                    <th> Productos</th>
                     <th>Cantidad (Kg)</th>
                     <th>Fecha de compra</th>
                     <th>Proveedor</th>
