--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     </header>
     <main class="contenedor">
         <div class="arriba boton">
-            <h1>Insumos</h1>
+            <h1>Listado de materia Prima</h1>
             <h1><a href="asignar.html">Asignar</a></h1>    
         </div>
         
         <table>
                 <tr>
-                    <th> Productos</th>
+                    <th> Insumo</th>
                     <th>Cantidad (Kg)</th>
                     <th>Fecha de compra</th>
                     <th>Proveedor</th>
