--- a/asignar.html
+++ b/asignar.html
@@ -12,7 +12,7 @@
         <section class="contenedor orden">
             <div class="barra">
                 <div class="logotipo">
-                    <img src="img/reciPlas.jpeg" class="logo1" alt="logo de la empresa">
+                   <h1>RECIPLAS</h1>
                 </div>
                 
                 <div class="nav">
