--- a/asignar.html
+++ b/asignar.html
@@ -32,13 +32,13 @@
     <form >
         <div class="formulario">
             <fieldset>
-                <legend>Asignacion de Productos</legend>
+                <legend>Asignacion de Insumo</legend>
                 <div class="campo">
                     <label for="fecha">Fecha: </label>
                     <input type="date" id="fecha">
                 </div>
                 <div class="campo">
-                    <label for="cliente">Nombre de Cliente: </label>
+                    <label for="cliente">Pedido: </label>
                     <input type="text" id="cliente" placeholder="Nombre del cliente">
                 </div>
     
@@ -47,7 +47,7 @@
                     <input type="number" id="cantidad" placeholder="Cantidad">
                 </div>
                 <div class="campo">
-                    <label for="Producto">Producto: </label>
+                    <label for="Producto">Insumo: </label>
                     <input type="text" id="Producto" placeholder="Producto">
                 </div>
                 <div class="campo">
