--- a/asignar.html
+++ b/asignar.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="campo">
                     <label for="cliente">Pedido: </label>
-                    <input type="text" id="cliente" placeholder="Nombre del cliente">
+                    <input type="text" id="cliente" placeholder="Identificacion de pedido">
                 </div>
     
                 <div class="campo">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="campo">
                     <label for="Producto">Insumo: </label>
-                    <input type="text" id="Producto" placeholder="Producto">
+                    <input type="text" id="Producto" placeholder="Insumo1 - cantidad:n; Insumo2- cantidad:j ... ">
                 </div>
                 <div class="campo">
                     <label for="descripcion">Descripcion: </label>
