--- a/asignar.html
+++ b/asignar.html
@@ -53,7 +53,7 @@
                 <div class="campo">
                     <label for="descripcion">Descripcion: </label>
                     <textarea name="Descripcion" id="descripcion" cols="30" rows="10"
-                    style="width: 608px; height: 120px;">Ingrese descripcion del Material</textarea>
+                    style="width: 608px; height: 120px;">Descripcion general</textarea>
                 </div>      
                 <input type="submit" value="Enviar" class="boton">
             </fieldset>
