--- a/asignar.html
+++ b/asignar.html
@@ -43,7 +43,7 @@
                 </div>
     
                 <div class="campo">
-                    <label for="cantidad">Cantidad: </label>
+                    <label for="cantidad">Cantidad total: </label>
                     <input type="number" id="cantidad" placeholder="Cantidad">
                 </div>
                 <div class="campo">
