--- a/solicitar.html
+++ b/solicitar.html
@@ -38,17 +38,13 @@
                         <input type="date" id="fecha">
                     </div>
                     <div class="campo">
-                        <label for="name">Nombre: </label>
-                        <input type="text" id="name" placeholder="Nombre del producto">
+                        <label for="name">Insumo: </label>
+                        <input type="text" id="name" placeholder="insumo:1, cantidad:n - insumo:2, cantidad:j">
                     </div>
         
                     <div class="campo">
                         <label for="cantidad">Cantidad: </label>
                         <input type="number" id="cantidad" placeholder="Cantidad">
-                    </div>
-                    <div class="campo">
-                        <label for="Producto">Proveedor: </label>
-                        <input type="text" id="Producto" placeholder="Nombre Proveedor ">
                     </div>
                     <div class="campo">
                         <label for="descripcion">Descripcion: </label>
