modificaciones en estilos

--- a/solicitar.html
+++ b/solicitar.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reciplas</title>
+    <script src="https://kit.fontawesome.com/cf5dc9ec56.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Permanent+Marker|Unna&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -21,7 +24,10 @@
                 </div>
                 <div class="usuario">
                     <img src="img/usuario.jpg" class="logo" alt="usuario logeado">
-                    <h3>John Doe</h3>
+                    <div class="logeo">
+                        <h3>John Doe</h3>
+                        <i class="fas fa-caret-square-down"></i>
+                    </div>
                 </div>
                 
             </div> 
@@ -60,7 +66,7 @@
 
         
          <footer class="footer">
-        <h2>Reciplas - Todos los derechos reservados &copy</h2>
+        <h2>2020 Reciplas - Todos los derechos reservados &copy</h2>
     </footer>
 </body>
 </html>
