modificacion en estilos

--- a/solicitar.html
+++ b/solicitar.html
@@ -42,22 +42,29 @@
                     <div class="campo">
                         <label for="fecha">Fecha: </label>
                         <input type="date" id="fecha">
+                        <i class="far fa-calendar-alt"></i>
                     </div>
                     <div class="campo">
                         <label for="name">Insumo: </label>
                         <input type="text" id="name" placeholder="insumo:1, cantidad:n - insumo:2, cantidad:j">
+                        <i class="fas fa-edit"></i>
                     </div>
         
                     <div class="campo">
                         <label for="cantidad">Cantidad: </label>
                         <input type="number" id="cantidad" placeholder="Cantidad">
+                        <i class="fas fa-edit"></i>
                     </div>
                     <div class="campo">
                         <label for="descripcion">Descripcion: </label>
                         <textarea name="Descripcion" id="descripcion" cols="30" rows="10"
                         style="width: 608px; height: 120px;">Descripcion general</textarea>
+                        <i class="fas fa-edit"></i>
                     </div>      
-                    <input type="submit" value="Enviar" class="boton">
+                    <div class="boton-ubicacion">
+                        <input type="submit" class="boton-enviar" value="Enviar" class="boton">
+                    </div>
+                    
                 </fieldset>
             </div>
         </form>
