modificacion en columnas y filas de la tabla en insumos

--- a/index.html
+++ b/index.html
@@ -51,42 +51,42 @@
                 </tr>
          
             <tr>
-                <td>Plastico</td>
+                <td class="fila">Plastico</td>
                 <td>20</td>
                 <td>01/01/01</td>
                 <td>Fulanito</td>
                 <td>La calidad</td>
             </tr>
             <tr>
-                <td>Pellets</td>
+                <td class="fila">Pellets</td>
                 <td>20</td>
                 <td>01/01/01</td>
                 <td>Fulanito</td>
                 <td>La calidad</td>
             </tr>
             <tr>
-                <td>Cosa1</td>
+                <td class="fila">Cosa1</td>
                 <td>20</td>
                 <td>01/01/01</td>
                 <td>Fulanito</td>
                 <td>La calidad</td>
             </tr>
             <tr>
-                <td>Cosa1</td>
+                <td class="fila">Cosa1</td>
                 <td>20</td>
                 <td>01/01/01</td>
                 <td>Fulanito</td>
                 <td>La calidad</td>
             </tr>
             <tr>
-                <td>Cosa1</td>
+                <td class="fila">Cosa1</td>
                 <td>20</td>
                 <td>01/01/01</td>
                 <td>Fulanito</td>
                 <td>La calidad</td>
             </tr>
             <tr>
-                <td>Cosa1</td>
+                <td class="fila">Cosa1</td>
                 <td>20</td>
                 <td>01/01/01</td>
                 <td>Fulanito</td>
