--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
        
         <div class="abajo boton">
-            <h1><a href="solitudes.html">Solicitudes pendientes</a></h1>
+            <h1><a href="solicitudes.html">Solicitudes pendientes</a></h1>
             <h1><a href="solicitar.html">Solicitar</a></h1>
         </div>
    
