--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reciplas</title>
     <script src="https://kit.fontawesome.com/cf5dc9ec56.js" crossorigin="anonymous"></script>
-<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Permanent+Marker|Unna&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Permanent+Marker|Unna&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -96,7 +96,7 @@
         </div>
        
         <div class="abajo boton">
-            <h1><a href="solitudes.html">Solicitudes pendientes</a></h1>
+            <h1><a href="solicitudes.html">Solicitudes pendientes</a></h1>
             <h1><a href="solicitar.html">Solicitar</a></h1>
         </div>
    
