--- a/solicitudes.html
+++ b/solicitudes.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reciplas</title>
+    <script src="https://kit.fontawesome.com/cf5dc9ec56.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Permanent+Marker|Unna&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +15,7 @@
         <section class="contenedor orden">
             <div class="barra">
                 <div class="logotipo">
-                    <img src="img/reciPlas.jpeg" class="logo1" alt="logo de la empresa">
+                    <h1>RECIPLAS</h1>
                 </div>
                 
                 <div class="nav">
@@ -21,7 +24,10 @@
                 </div>
                 <div class="usuario">
                     <img src="img/usuario.jpg" class="logo" alt="usuario logeado">
-                    <h3>John Doe</h3>
+                    <div class="logeo">
+                        <h3>John Doe</h3>
+                        <i class="fas fa-caret-square-down"></i>
+                    </div>
                 </div>
                 
             </div> 
