--- a/historial.html
+++ b/historial.html
@@ -19,13 +19,13 @@
                 </div>
                 
                 <div class="nav">
-                    <a href="nuevo_index.html">Insumos</a>
+                    <a href="index.html">Insumos</a>
                     <a href="productos.html">Productos</a>
                 </div>
                 <div class="usuario">
                     <img src="img/usuario.jpg" class="logo" alt="usuario logeado">
                     <div class="logeo">
-                        <h3>John Doe</h3>
+                        <h3>Jinnar</h3>
                         <i class="fas fa-caret-square-down"></i>
                     </div>
                     
