--- a/solicitar.html
+++ b/solicitar.html
@@ -25,7 +25,7 @@
                 <div class="usuario">
                     <img src="img/usuario.jpg" class="logo" alt="usuario logeado">
                     <div class="logeo">
-                        <h3>John Doe</h3>
+                        <h3>Jinnar</h3>
                         <i class="fas fa-caret-square-down"></i>
                     </div>
                 </div>
