Boton asignar a la derecha

--- a/asignar.html
+++ b/asignar.html
@@ -52,13 +52,13 @@
                 </div>
     
                 <div class="campo">
-                    <label for="cantidad">Cantidad total: </label>
+                    <label for="cantidad">Cantidad: </label>
                     <input type="number" id="cantidad" placeholder="Cantidad">
                     <i class="fas fa-edit"></i>
                 </div>
                 <div class="campo">
                     <label for="Producto">Insumo: </label>
-                    <input type="text" id="Producto" placeholder="Insumo1 - cantidad:n; Insumo2- cantidad:j ... ">
+                    <input type="text" id="Producto" placeholder="Insumo">
                     <i class="fas fa-edit"></i>
                 </div>
                 <div class="campo">
