--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     <main class="contenedor">
         <div class="arriba boton">
             <h1>Listado de materia Prima</h1>
-            <h1><a href="asignar.html">Asignar</a></h1>   
             <h1><a href="historial.html">Historial de compra</a></h1> 
         </div>
         <div class="contenedor-tabla">
@@ -58,31 +57,42 @@
                 <td class="fila">Plastico</td>
                 <td>20</td>
                 <td>La calidad</td>
+                <td class="boton boton-asignar"><a href="asignar.html">Asignar</a></td>
             </tr>
             <tr>
                 <td class="fila">Pellets</td>
                 <td>20</td>
                 <td>La calidad</td>
+                <td class="boton boton-asignar"><a href="asignar.html">Asignar</a></td>
+
             </tr>
             <tr>
                 <td class="fila">Cosa1</td>
                 <td>20</td>
                 <td>La calidad</td>
+                <td class="boton boton-asignar"><a href="asignar.html">Asignar</a></td>
+
+            </tr>
+            <tr>
+                <td class="fila">Cosa1</td>
+                <td>20</td>
+                <td class="">La calidad</td>
+                <td class="boton boton-asignar"><a href="asignar.html">Asignar</a></td>
+
             </tr>
             <tr>
                 <td class="fila">Cosa1</td>
                 <td>20</td>
                 <td>La calidad</td>
+                <td class="boton boton-asignar"><a href="asignar.html">Asignar</a></td>
+
             </tr>
             <tr>
                 <td class="fila">Cosa1</td>
                 <td>20</td>
                 <td>La calidad</td>
-            </tr>
-            <tr>
-                <td class="fila">Cosa1</td>
-                <td>20</td>
-                <td>La calidad</td>
+                <td class="boton boton-asignar "><a href="asignar.html">Asignar</a></td>
+
             </tr>
         </table>
         </div>
