correccion de margenes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1>Listado de materia Prima</h1>
             <h1><a href="historial.html">Historial de compra</a></h1> 
         </div>
-        <div class="contenedor-tabla">
+        <div class="contenedor-tabla-historial">
             <table>
                 <tr>
                     <th>Insumo</th>
