cambio de los botones enviar en solicitar y asignar para que vuelva al index

--- a/asignar.html
+++ b/asignar.html
@@ -67,8 +67,8 @@
                     style="width: 608px; height: 120px;">Descripcion general</textarea>
                     <i class="fas fa-edit"></i>
                 </div>    
-                <div class="boton-ubicacion">
-                    <input type="submit" class="boton-enviar" value="Enviar" class="boton">
+                <div class="boton boton-ubicacion">
+                   <a href="index.html">Enviar</a>
                 </div>  
               
             </fieldset>
