--- a/solicitar.html
+++ b/solicitar.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="campo">
                         <label for="name">Insumo: </label>
-                        <input type="text" id="name" placeholder="insumo:1, cantidad:n - insumo:2, cantidad:j">
+                        <input type="text" id="name" placeholder="insumos">
                         <i class="fas fa-edit"></i>
                     </div>
         
@@ -61,8 +61,8 @@
                         style="width: 608px; height: 120px;">Descripcion general</textarea>
                         <i class="fas fa-edit"></i>
                     </div>      
-                    <div class="boton-ubicacion">
-                        <input type="submit" class="boton-enviar" value="Enviar" class="boton">
+                    <div class="boton boton-ubicacion">
+                        <a href="index.html">Enviar</a>
                     </div>
                     
                 </fieldset>
