funcion de agregar el stock

--- a/historial.html
+++ b/historial.html
@@ -36,7 +36,7 @@
     </header>
     <main class="contenedor">
         <div class="arriba boton">
-            <h1>Historial de compra</h1>
+            <h1>Stock de insumos</h1>
         </div>
         <div class="contenedor-tabla">
             <table>
@@ -96,6 +96,7 @@
         <div class="abajo boton">
             <h1><a href="solicitudes.html">Solicitudes pendientes</a></h1>
             <h1><a href="solicitar.html">Solicitar</a></h1>
+            <h1><a href="agregar.html">Agregar</a></h1>
         </div>
    
         
