--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main class="contenedor">
         <div class="arriba boton">
             <h1>Listado de materia Prima</h1>
-            <h1><a href="historial.html">Historial de compra</a></h1> 
+            <h1><a href="historial.html">Stock</a></h1> 
         </div>
         <div class="contenedor-tabla-historial">
             <table>
