--- a/asignar.html
+++ b/asignar.html
@@ -19,8 +19,8 @@
                 </div>
                 
                 <div class="nav">
-                    <a href="index.html">Insumos</a>
-                    <a href="productos.html">Productos</a>
+                    <a href="index.html">A Produccion</a>
+                    <a href="historial.html">A Administracion</a>
                 </div>
                 <div class="usuario">
                     <img src="img/usuario.jpg" class="logo" alt="usuario logeado">
