cambio de header

--- a/historial.html
+++ b/historial.html
@@ -36,7 +36,7 @@
     </header>
     <main class="contenedor">
         <div class="arriba boton">
-            <h1>Stock de insumos</h1>
+            <h1>Compras realizadas</h1>
         </div>
         <div class="contenedor-tabla">
             <table>
