--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     <main class="contenedor">
         <div class="arriba boton">
             <h1>Listado de materia Prima</h1>
-            <h1><a href="historial.html">Vista Compras</a></h1> 
         </div>
         <div class="contenedor-tabla-historial">
             <table>
@@ -99,6 +98,7 @@
        
         <div class="abajo boton">
             <h1><a href="solicitar.html">Solicitar</a></h1>
+            <h1><a href="solicitudes.html">Solicitudes pendientes</a></h1>
         </div>
    
         
