factura y estado de solicitudes

--- a/historial.html
+++ b/historial.html
@@ -95,7 +95,7 @@
        
         <div class="abajo boton">
             <h1><a href="solicitudes.html">Solicitudes pendientes</a></h1>
-            <h1><a href="agregar.html">Registrar Factura</a></h1>
+            <h1><a href="factura.html">Registrar Factura</a></h1>
         </div>
    
         
