--- a/solicitudes.html
+++ b/solicitudes.html
@@ -42,6 +42,7 @@
                         <th>Cantidad</th>
                         <th>Calidad</th>
                         <th>Fecha de solicitud</th>
+                        <th>Estado</th>
                     </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -49,6 +50,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -56,6 +58,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -63,6 +66,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -70,6 +74,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -77,6 +82,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -84,6 +90,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -91,6 +98,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -98,6 +106,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -105,6 +114,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
                 <tr>
                     <td class="fila">0001</td>
@@ -112,6 +122,7 @@
                     <td>1222</td>
                     <td>La calidad</td>
                     <td>22/12/1998</td>
+                    <td>------</td>
                 </tr>
             </table>
             </div>
