area administracion falta terminar R4 y R5-R6

--- a/administracion/administracion.html
+++ b/administracion/administracion.html
@@ -53,15 +53,15 @@
                     </a>
                 </div>
                 <div class="opcion-admi">
-                    <a href="listapedidos.html">
+                    <a href="ventas.html">
                         <i class="fas fa-clipboard-list"></i>
                         <h2>Ventas</h2>
                     </a>
 
                 </div>
                 <div class="opcion-admi">
-                    <a href="#">
-                        <i class="fas fa-hand-holding-usd"></i>
+                    <a href="usuarios.html">
+                        <i class="fas fa-user-tie"></i>
                         <h2>Usuarios</h2>
                     </a>
 
@@ -69,22 +69,22 @@
             </div>
             <div class="menu-administracion">
                 <div class="opcion-admi">
-                    <a href="#">
-                        <i class="fas fa-hand-holding-usd"></i>
+                    <a href="compras.html">
+                        <i class="fas fa-shopping-cart"></i>
                         <h2>Compras</h2>
                     </a>
 
                 </div>
                 <div class="opcion-admi">
                     <a href="#">
-                        <i class="fas fa-hand-holding-usd"></i>
+                        <i class="fas fa-clipboard-check"></i>
                         <h2>Gestion de Stock</h2>
                     </a>
 
                 </div>
                 <div class="opcion-admi">
                     <a href="#">
-                        <i class="fas fa-hand-holding-usd"></i>
+                        <i class="fas fa-comment-alt"></i>
                         <h2>Solicitudes MP</h2>
                     </a>
 
