--- a/administracion/nuevopedido.html
+++ b/administracion/nuevopedido.html
@@ -10,15 +10,15 @@
     <!--Fuentes de Google-->
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Permanent+Marker|Unna&display=swap" rel="stylesheet">
     <!--Estilos -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 <body>
     <header class="site-header">
         <section class="contenedor orden">
             <div class="barra-comercializacion">
                 <div class="logotipo">
-                    <img src="img/reciplas.png" width="200px" alt="">
+                    <img src="../img/reciplas.png" width="200px" alt="">
                 </div>
 
                 <!--Botones del navbar -->
@@ -28,7 +28,7 @@
                 </div> -->
                 <!--Nombre de usuario, aparece el logo de usuario y el nombre-->
                 <div class="usuario">
-                    <img src="img/usuario.jpg" width="40px" class="logo" alt="usuario logeado">
+                    <img src="../img/usuario.jpg" width="40px" class="logo" alt="usuario logeado">
                     <div class="logeo">
                         <h3>Jinnar</h3>
                         <i class="fas fa-caret-square-down"></i>
