--- a/comercializacion/listapedidos.html
+++ b/comercializacion/listapedidos.html
@@ -9,8 +9,8 @@
 	<!--Fuentes de Google-->
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Permanent+Marker|Unna&display=swap" rel="stylesheet">
     <!--Estilos -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style.css">
 <body>
     <header class="site-header">
     
