--- a/administracion/modificarpedido.html
+++ b/administracion/modificarpedido.html
@@ -41,13 +41,13 @@
     </header>
 
     <main class="contenedor inicio-titulo">
-        <h1>Registrar pedido nuevo</h1>
+        <h1>Modificar pedido</h1>
         <form >
             <div class="formulario">
                 <fieldset>
                     <div class="campo fijo">
-                        <label for="id">Nro pedido: </label>
-                        <input type="number" id="id" placeholder="Nro">
+                        <label for="id">ID: </label>
+                        <input type="number" id="id" placeholder="001">
                         <i class="fas fa-edit"></i>
                         <label for="Apellido">Fecha de solicitud:</label>
                         <input type="date" >
@@ -63,9 +63,6 @@
                            <option value="">Proveedor 2</option>
                            <option value="">Proveedor 3</option>
                        </select>
-                       <label for="puesto">Puesto: </label>
-                        <input type="text" id="puesto" placeholder="puesto">
-                        <i class="fas fa-edit"></i>
                        
                     </div>   
                     <div class="boton boton-admi">
