--- a/administracion/opciongestion.html
+++ b/administracion/opciongestion.html
@@ -44,52 +44,31 @@
 
         <div class="inicio-titulo contenedor">
             <h1>Area de Administracion</h1>
+            <br>
+            <br>
+            <br>
+            
             <div class="menu-administracion">
                 <div class="opcion-admi">
 
-                    <a href="proveedores.html">
-                        <i class="fas fa-users"></i>
-                        <h2>Proveedores</h2>
+                    <a href="stock.html">
+                        <i class="fas fa-cubes"></i>
+                        <h2>Insumos</h2>
                     </a>
                 </div>
                 <div class="opcion-admi">
-                    <a href="ventas.html">
-                        <i class="fas fa-clipboard-list"></i>
-                        <h2>Ventas</h2>
-                    </a>
-
-                </div>
-                <div class="opcion-admi">
-                    <a href="usuarios.html">
-                        <i class="fas fa-user-tie"></i>
-                        <h2>Usuarios</h2>
+                    <a href="productostermi.html">
+                        <i class="fas fa-donate"></i>
+                        <h2>Productos</h2>
                     </a>
 
                 </div>
             </div>
-            <div class="menu-administracion">
-                <div class="opcion-admi">
-                    <a href="compras.html">
-                        <i class="fas fa-shopping-cart"></i>
-                        <h2>Compras</h2>
-                    </a>
-
-                </div>
-                <div class="opcion-admi">
-                    <a href="opciongestion.html">
-                        <i class="fas fa-clipboard-check"></i>
-                        <h2>Gestion de Stock</h2>
-                    </a>
-
-                </div>
-                <div class="opcion-admi">
-                    <a href="solicitudes.html">
-                        <i class="fas fa-comment-alt"></i>
-                        <h2>Solicitudes MP</h2>
-                    </a>
-
-                </div>
-            </div>
+           <br>
+           <br>
+           <br>
+           <br>
+          <br>
 
         </div>
     </main>
